#1664 fixed overflow text

--- a/web/assets/css/step4-product-preview-css.css
+++ b/web/assets/css/step4-product-preview-css.css
@@ -2,6 +2,11 @@
     border-radius: 4px;
 }
 
+.pd-lr-10 {
+    padding-left: 10px;
+    padding-right: 10px;
+}
+
 .center.disable-buttons a {
     cursor: default;
 }
